package edu.fiuba.algo3.modelo.edificios;

import edu.fiuba.algo3.modelo.pistas.PistaPuerto;

public class Aeropuerto extends Edificio {

    public Aeropuerto(PistaPuerto entrada) {
        super(entrada);
    }
}

