package edu.fiuba.algo3.modelo.edificios;

import edu.fiuba.algo3.modelo.pistas.PistaEconomica;

public class Banco extends Edificio {

    public Banco(PistaEconomica entrada) {
        super(entrada);
    }
}
