package edu.fiuba.algo3.modelo.edificios;

import edu.fiuba.algo3.modelo.pistas.PistaEconomica;

public class Bolsa extends Edificio {
    public Bolsa(PistaEconomica pista) {
        super(pista);
    }
}
