package edu.fiuba.algo3.modelo.edificios;

import edu.fiuba.algo3.modelo.pistas.PistaPuerto;

public class Puerto extends Edificio {

    public Puerto(PistaPuerto entrada) {
        super(entrada);
    }
}


