@startuml

abstract Edificio{
    - pista : Pista
    - controlador : ControladorEntradas
    + entrar() : Tiempo
}

class Bolsa{
    - pistaEconomica : Pista
    - controlador : ControladorEntradas
    + entrar() : Tiempo
}

class Banco{
    - pistaEconomica : Pista
    - controlador : ControladorEntradas
    + entrar() : Tiempo
}

class Biblioteca{
    - pistaBiblioteca : Pista
    - controlador : ControladorEntradas
    + entrar() : Tiempo
}

class Puerto{
    - pistaPuerto : Pista
    - controlador : ControladorEntradas
    + entrar() : Tiempo
}

class Aeropuerto{
    - pistaPuerto : Pista
    - controlador : ControladorEntradas
    + entrar() : Tiempo
}

note left of Edificio::entrar
    this.pista.mostrarPista()
    return controlador.demoraTemporal()
end note

Bolsa --|> Edificio
Banco --|> Edificio
Biblioteca  --|> Edificio
Edificio <|-- Puerto
Edificio <|-- Aeropuerto

@enduml